Fix thread-safety and correctness defects in the WSIF Java provider
A WSIFPort_Java is cached and reused across threads, and every operation it
hands out is a shallow copy of a cached prototype. Several of the structures
shared that way were mutated on the invocation path without synchronisation.

Thread safety
- WSIFOperation_Java: build the fault-message map once in the constructor and
  publish it immutably. It was built lazily on the first fault and shared by
  reference with every copy(), so concurrent invocations structurally modified
  the same unsynchronised HashMap. A build failure is captured and rethrown
  from getFaultMessageInfos() so the original failure timing is preserved.
- WSIFPort_Java: operationInstances is now a ConcurrentHashMap; it was a plain
  HashMap subject to a check-then-act from createOperation().
- WSIFPort_Java: mark serviceObjectClass/Methods/Constructors and
  fieldObjectReference volatile. Publishing these through a data race allowed
  another thread to observe the array reference while still reading null
  elements. fieldTypeMaps is now final and unmodifiable.
- WSIFDynamicProvider_Java: return defensive copies from the namespace getters.
  static final froze only the array reference, so any caller could have
  corrupted the provider lookup process-wide.
- PrivateCompositeExtensionRegistry: back the registry list with a
  CopyOnWriteArrayList. Providers append from their constructors during lazy
  discovery, which can overlap with WSDL parsing, and the previous Vector took
  a monitor on every read of the frequent query path.

Correctness
- Continue instead of break when a candidate's arguments are incompatible.
  getMethods() deliberately returns every matching overload, but the six
  invocation loops abandoned the whole candidate list on the first mismatch.
- Guard getCompatibleArguments() against an arity mismatch: it sized the result
  from args.length but iterated parmTypes.length, risking an
  ArrayIndexOutOfBoundsException.